# better-than-champions

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  makefile
hooks/: pre-commit
src/: main.cpp  modules.hpp
src/calc/: Damage.hpp  HitCheck.hpp  Stats.hpp
src/calc/primitives/: Accuracy.hpp  Percent.hpp  Ratio.hpp  Stage.hpp
src/calc/steps/: Accuracy.hpp  BaseDamage.hpp  Critical.hpp  Nature.hpp  Stab.hpp  StatStage.hpp  TypeEff.hpp  Variance.hpp
src/calc/tables/: AccuracyTable.hpp  CritChanceTable.hpp  StatTable.hpp
src/data/: MonSetData.hpp  MoveData.hpp  SpeciesData.hpp  TypeChart.hpp
src/types/: aliases.hpp  limits.hpp
src/types/ids/: BaseStat.hpp  Efficacy.hpp  MonSet.hpp  Move.hpp  Nature.hpp  NatureStat.hpp  Species.hpp  Type.hpp
src/types/models/: BaseStat.hpp  MonSet.hpp  Move.hpp  Species.hpp  StatBlock.hpp
src/util/: Array.hpp  Rng.hpp
tests/: test_BaseStat.cpp  test_Nature.cpp  test_TypeChart.cpp
